load view from layout

--- a/examples/example-0022/example-0022.csproj
+++ b/examples/example-0022/example-0022.csproj
@@ -16,6 +16,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Include="layout.json" CopyToOutputDirectory="PreserveNewest" />    
+	</ItemGroup>
+
+	<ItemGroup>
 
 		<PackageReference Include="netcore-opengl-core" Version="2.5.5" />
 		<PackageReference Include="netcore-opengl-render" Version="2.5.5" />
