--- a/examples/example-0022/example-0022.csproj
+++ b/examples/example-0022/example-0022.csproj
@@ -21,15 +21,19 @@
 
 	<ItemGroup>
 
-		<PackageReference Include="netcore-opengl-core" Version="2.5.5" />
+		<!-- <PackageReference Include="netcore-opengl-core" Version="2.5.5" />
 		<PackageReference Include="netcore-opengl-render" Version="2.5.5" />
 		<PackageReference Include="netcore-opengl-gui" Version="2.5.5" />
-		<PackageReference Include="netcore-opengl-shapes" Version="2.5.5" />
+		<PackageReference Include="netcore-opengl-shapes" Version="2.5.5" /> -->
 
-		<!-- <ProjectReference Include="..\..\..\..\..\opensource\netcore-opengl\src\core\netcore-opengl-core.csproj" />
+		<ProjectReference Include="..\..\..\..\..\opensource\netcore-opengl\src\core\netcore-opengl-core.csproj" />
 		<ProjectReference Include="..\..\..\..\..\opensource\netcore-opengl\src\render\netcore-opengl-render.csproj" />
 		<ProjectReference Include="..\..\..\..\..\opensource\netcore-opengl\src\gui\netcore-opengl-gui.csproj" />
-		<ProjectReference Include="..\..\..\..\..\opensource\netcore-opengl\src\shapes\netcore-opengl-shapes.csproj" /> -->
+		<ProjectReference Include="..\..\..\..\..\opensource\netcore-opengl\src\shapes\netcore-opengl-shapes.csproj" />
+
+		<!-- <ProjectReference Include="..\..\..\..\..\opensource\netcore-opengl\src\nurbs\netcore-opengl-nurbs.csproj" /> -->
+		<Compile Include="..\..\..\..\..\opensource\netcore-opengl\src\nurbs\Ext.cs" />
+		<Compile Include="..\..\..\..\..\opensource\netcore-opengl\src\nurbs\Toolkit.cs" />
 	</ItemGroup>
 
 </Project>
