--- a/src/GShark/GShark.csproj
+++ b/src/GShark/GShark.csproj
@@ -7,7 +7,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <AssemblyName>GShark</AssemblyName>
     <RootNamespace>GShark</RootNamespace>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>11</LangVersion>
 	<GenerateDocumentationFile>true</GenerateDocumentationFile>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Sharker/G-Shark</RepositoryUrl>	
@@ -32,6 +32,15 @@
 	
   <ItemGroup>
     <None Include="../../media/gshark-logo.png" Pack="true" PackagePath="" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="netcore-opengl-core" Version="3.1.0" />
+		<PackageReference Include="netcore-opengl-gui" Version="3.1.0" />
+		<PackageReference Include="netcore-opengl-shapes" Version="3.1.0" />
+    <Compile Include="..\..\..\netcore-opengl\src\nurbs\Ext.cs" />
+		<Compile Include="..\..\..\netcore-opengl\src\nurbs\Toolkit.cs" />
+
   </ItemGroup>
 
 </Project>
